force-app/main/default/objects/Snapshot__c/Snapshot__c.object-meta.xml
<CustomObject>
    <description>Objeto que hereda los campos del informe de Snapshot</description>
    <label>Snapshot</label>
    <nameField>
        <label>Nombre de Snapshot</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>