force-app/main/default/objects/Snapshot__c/fields/CESS_Equipo_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>CESS_Equipo_de_Venta__c</fullName>
    <label>CESS - Equipo de Venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>