force-app/main/default/objects/Snapshot__c/fields/Fecha_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_cierre__c</fullName>
    <label>Fecha de cierre</label>
    <type>Date</type>
</CustomField>