force-app/main/default/objects/Snapshot__c/fields/Nombre_de_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Oportunidad__c</fullName>
    <label>Nombre de Oportunidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>